--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T15:11:39.752829900Z",
-     "start_time": "2026-02-10T15:11:39.353569300Z"
+     "end_time": "2026-02-10T17:24:45.652396700Z",
+     "start_time": "2026-02-10T17:24:42.715409300Z"
     }
    },
    "cell_type": "code",
@@ -14,15 +14,15 @@
    ],
    "id": "6837f2b02e8dce31",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "0f40c543",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T15:11:51.823140700Z",
-     "start_time": "2026-02-10T15:11:51.679866Z"
+     "end_time": "2026-02-10T17:47:36.537431200Z",
+     "start_time": "2026-02-10T17:47:36.333926300Z"
     }
    },
    "source": [
@@ -45,6 +45,7 @@
     "import sys\n",
     "from dataclasses import dataclass, replace\n",
     "sys.path.append(os.path.abspath('..'))\n",
+    "import time\n",
     "\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -63,8 +64,8 @@
     "\n",
     "\n",
     "# Wake model-agnostic edits to DiffWake\n",
+    "from diffwake.diffwake_jax.layout_runner_agnostic import make_layout_runner\n",
     "from diffwake.diffwake_jax.model_agnostic import load_input, create_state\n",
-    "from diffwake.diffwake_jax import model_agnostic\n",
     "from diffwake.diffwake_jax.util_agnostic import average_velocity_jax, State, Result\n",
     "from diffwake.diffwake_jax.turbine.operation_models import power as power_fn\n",
     "from diffwake.diffwake_jax.sim_agnostic import simulate_simp, simulate\n",
@@ -79,13 +80,13 @@
     "    return x\n"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T15:12:03.572121800Z",
-     "start_time": "2026-02-10T15:12:03.446292800Z"
+     "end_time": "2026-02-10T17:32:13.020766400Z",
+     "start_time": "2026-02-10T17:32:12.756094200Z"
     }
    },
    "cell_type": "code",
@@ -187,13 +188,13 @@
    ],
    "id": "65f79b960202888e",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T15:12:24.290601800Z",
-     "start_time": "2026-02-10T15:12:10.037392500Z"
+     "end_time": "2026-02-10T17:32:16.201536Z",
+     "start_time": "2026-02-10T17:32:13.022771Z"
     }
    },
    "cell_type": "code",
@@ -250,7 +251,7 @@
    ],
    "id": "476bf48af3f5bfde",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -261,39 +262,39 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T14:47:19.119107100Z",
-     "start_time": "2026-02-10T14:47:18.985959700Z"
+     "end_time": "2026-02-10T17:32:17.231785Z",
+     "start_time": "2026-02-10T17:32:16.307313900Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Horns Rev 1 simulation\n",
-    "# fmodel = FlorisModel(r\"..\\floris\\examples\\inputs\\cc_vesta.yaml\")\n",
-    "#\n",
-    "# fmodel_gch = FlorisModel(r\"..\\floris\\examples\\inputs\\gauss_vesta.yaml\")\n",
-    "#\n",
-    "# time_series = TimeSeries(\n",
-    "#     wind_directions=np.array([270.0]),\n",
-    "#     wind_speeds=np.array([13.5]),\n",
-    "#     turbulence_intensities=0.06,\n",
-    "# )\n",
-    "#\n",
-    "# fmodel.set(wind_data=time_series)\n",
-    "# cc_start_time = time.time()\n",
-    "# fmodel.run()\n",
-    "# cc_end_time = time.time()\n",
-    "#\n",
-    "#\n",
-    "# fmodel_gch.set(wind_data=time_series)\n",
-    "# gch_start_time = time.time()\n",
-    "# fmodel_gch.run()\n",
-    "# gch_end_time = time.time()\n",
-    "#\n",
-    "#\n",
-    "# gch_farm_power_floris = fmodel_gch.get_farm_power() / 1e6\n",
-    "# gch_turbine_powers_floris = fmodel_gch.get_turbine_powers()\n",
-    "# cc_farm_power_floris = fmodel.get_farm_power() / 1e6\n",
-    "# cc_turbine_powers_floris = fmodel.get_turbine_powers()\n",
+    "fmodel = FlorisModel(r\"..\\floris\\examples\\inputs\\cc_vesta.yaml\")\n",
+    "\n",
+    "fmodel_gch = FlorisModel(r\"..\\floris\\examples\\inputs\\gauss_vesta.yaml\")\n",
+    "\n",
+    "time_series = TimeSeries(\n",
+    "    wind_directions=np.array([270.0]),\n",
+    "    wind_speeds=np.array([13.5]),\n",
+    "    turbulence_intensities=0.06,\n",
+    ")\n",
+    "\n",
+    "fmodel.set(wind_data=time_series)\n",
+    "cc_start_time = time.time()\n",
+    "fmodel.run()\n",
+    "cc_end_time = time.time()\n",
+    "\n",
+    "\n",
+    "fmodel_gch.set(wind_data=time_series)\n",
+    "gch_start_time = time.time()\n",
+    "fmodel_gch.run()\n",
+    "gch_end_time = time.time()\n",
+    "\n",
+    "\n",
+    "gch_farm_power_floris = fmodel_gch.get_farm_power() / 1e6\n",
+    "gch_turbine_powers_floris = fmodel_gch.get_turbine_powers()\n",
+    "cc_farm_power_floris = fmodel.get_farm_power() / 1e6\n",
+    "cc_turbine_powers_floris = fmodel.get_turbine_powers()\n",
     "\n",
     "\n",
     "# Set printing precision\n",
@@ -304,15 +305,15 @@
     "# print(f\"\\nTurbine powers with Cumulative-Curl (W): {cc_powers}\")\n",
     "print(f\"Total farm power (MW): {cc_farm_power:.3f}\")\n",
     "\n",
-    "# print(\"\\n---------- FLORIS Results ----------\")\n",
-    "# # print(f\"Turbine powers with Gauss-Curl Hybrid (W): {gch_turbine_powers_floris}\")\n",
-    "# print(f\"Total farm power (MW): {gch_farm_power_floris[0]:.3f}\")\n",
-    "# # print(f\"\\nTurbine powers with Cumulative-Curl (W): {cc_turbine_powers_floris}\")\n",
-    "# print(f\"Total farm power (MW): {cc_farm_power_floris[0]:.3f}\")\n",
-    "#\n",
-    "# print(\"\\n---------- Differences ----------\")\n",
-    "# print(f\"Absolute farm power difference (GCH) = {absolute_percentage_difference(gch_farm_power_floris, gch_farm_power)[0]:.2f}%\")\n",
-    "# print(f\"Absolute farm power difference (CC) = {absolute_percentage_difference(cc_farm_power_floris, cc_farm_power)[0]:.2f}%\")\n"
+    "print(\"\\n---------- FLORIS Results ----------\")\n",
+    "# print(f\"Turbine powers with Gauss-Curl Hybrid (W): {gch_turbine_powers_floris}\")\n",
+    "print(f\"Total farm power (MW): {gch_farm_power_floris[0]:.3f}\")\n",
+    "# print(f\"\\nTurbine powers with Cumulative-Curl (W): {cc_turbine_powers_floris}\")\n",
+    "print(f\"Total farm power (MW): {cc_farm_power_floris[0]:.3f}\")\n",
+    "\n",
+    "print(\"\\n---------- Differences ----------\")\n",
+    "print(f\"Absolute farm power difference (GCH) = {absolute_percentage_difference(gch_farm_power_floris, gch_farm_power)[0]:.2f}%\")\n",
+    "print(f\"Absolute farm power difference (CC) = {absolute_percentage_difference(cc_farm_power_floris, cc_farm_power)[0]:.2f}%\")\n"
    ],
    "id": "6406a8be9499ac2b",
    "outputs": [
@@ -321,25 +322,33 @@
      "output_type": "stream",
      "text": [
       "---------- DiffWake JAX Results ----------\n",
-      "Total farm power (MW): 1.972\n",
-      "Total farm power (MW): 1.972\n"
+      "Total farm power (MW): 142.646\n",
+      "Total farm power (MW): 97.611\n",
+      "\n",
+      "---------- FLORIS Results ----------\n",
+      "Total farm power (MW): 142.443\n",
+      "Total farm power (MW): 97.540\n",
+      "\n",
+      "---------- Differences ----------\n",
+      "Absolute farm power difference (GCH) = 0.14%\n",
+      "Absolute farm power difference (CC) = 0.07%\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T14:47:34.063309500Z",
-     "start_time": "2026-02-10T14:47:33.930936400Z"
+     "end_time": "2026-02-10T17:32:17.563966600Z",
+     "start_time": "2026-02-10T17:32:17.337347800Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# print(\"------------ FLORIS runtimes ------------\")\n",
-    "# print(f\"Cumulative-Curl: {cc_end_time - cc_start_time:.4f}s\")\n",
-    "# print(f\"Gauss-Curl Hybrid: {gch_end_time - gch_start_time:.4f}s\")\n",
+    "print(\"------------ FLORIS runtimes ------------\")\n",
+    "print(f\"Cumulative-Curl: {cc_end_time - cc_start_time:.4f}s\")\n",
+    "print(f\"Gauss-Curl Hybrid: {gch_end_time - gch_start_time:.4f}s\")\n",
     "\n",
     "print(\"\\n------------ DiffWake runtimes ------------\")\n",
     "print(f\"Cumulative-Curl: {cc_runtime:.4f}s\")\n",
@@ -351,14 +360,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "------------ FLORIS runtimes ------------\n",
+      "Cumulative-Curl: 0.2000s\n",
+      "Gauss-Curl Hybrid: 0.0913s\n",
       "\n",
       "------------ DiffWake runtimes ------------\n",
-      "Cumulative-Curl: 4.6562s\n",
-      "Gauss-Curl Hybrid: 0.7230s\n"
+      "Cumulative-Curl: 1.4860s\n",
+      "Gauss-Curl Hybrid: 1.3816s\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -382,158 +394,101 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T14:51:27.678550400Z",
-     "start_time": "2026-02-10T14:51:27.012361100Z"
+     "end_time": "2026-02-10T17:47:43.250283300Z",
+     "start_time": "2026-02-10T17:47:43.060882400Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Run using lax_fori\n",
-    "cc_lax_start = time.time()\n",
-    "cc_sim.run(scan=True)\n",
-    "cc_lax_end = time.time()\n",
-    "\n",
-    "gch_lax_start = time.time()\n",
-    "gch_sim.run(scan=True)\n",
-    "gch_lax_end = time.time()\n",
-    "\n",
-    "cc_lax_runtime = cc_lax_end - cc_lax_start\n",
-    "gch_lax_runtime = gch_lax_end - gch_lax_start\n",
-    "\n",
-    "print(\"\\n------------ DiffWake runtimes (simple for loop) ------------\")\n",
-    "print(f\"Cumulative-Curl: {cc_runtime:.4f}s\")\n",
-    "print(f\"Gauss-Curl Hybrid: {gch_runtime:.4f}s\")\n",
-    "\n",
-    "print(\"\\n------------ DiffWake runtimes (lax) ------------\")\n",
-    "print(f\"Cumulative-Curl: {cc_lax_runtime:.4f}s\")\n",
-    "print(f\"Gauss-Curl Hybrid: {gch_lax_runtime:.4f}s\")"
+    "# # Run using lax_fori\n",
+    "# cc_lax_start = time.time()\n",
+    "# cc_sim.run(scan=True)\n",
+    "# cc_lax_end = time.time()\n",
+    "# #\n",
+    "# gch_lax_start = time.time()\n",
+    "# gch_sim.run(scan=True)\n",
+    "# gch_lax_end = time.time()\n",
+    "#\n",
+    "# cc_lax_runtime = cc_lax_end - cc_lax_start\n",
+    "# gch_lax_runtime = gch_lax_end - gch_lax_start\n",
+    "#\n",
+    "# print(\"\\n------------ DiffWake runtimes (simple for loop) ------------\")\n",
+    "# print(f\"Cumulative-Curl: {cc_runtime:.4f}s\")\n",
+    "# print(f\"Gauss-Curl Hybrid: {gch_runtime:.4f}s\")\n",
+    "#\n",
+    "# print(\"\\n------------ DiffWake runtimes (lax) ------------\")\n",
+    "# print(f\"Cumulative-Curl: {cc_lax_runtime:.4f}s\")\n",
+    "# print(f\"Gauss-Curl Hybrid: {gch_lax_runtime:.4f}s\")"
    ],
    "id": "2b336c7f48be8a05",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-10T14:51:29.226417Z",
-     "start_time": "2026-02-10T14:51:29.107788700Z"
+     "end_time": "2026-02-10T17:47:48.586265100Z",
+     "start_time": "2026-02-10T17:47:48.390731700Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Runtimes using lax\n",
-    "cc_lax = cc_lax_end - cc_lax_start\n",
-    "gch_lax = gch_lax_end - gch_lax_start\n",
-    "cc_lax_farm_power = cc_sim.get_farm_power() / 1e6\n",
-    "gch_lax_farm_power = gch_sim.get_farm_power() / 1e6\n",
-    "\n",
-    "print(\"\\n------------ DiffWake powers (jax.lax) ------------\")\n",
-    "print(f\"Total farm power (MW): {cc_lax_farm_power:.3f}\")\n",
-    "print(f\"Total farm power (MW): {gch_lax_farm_power:.3f}\")\n",
-    "print(\"\\n------------ DiffWake runtimes (jax.lax) ------------\")\n",
-    "print(f\"Cumulative-Curl: {cc_lax:.4f}s\")\n",
-    "print(f\"Gauss-Curl Hybrid: {gch_runtime:.4f}s\")"
+    "# # Runtimes using lax\n",
+    "# cc_lax = cc_lax_end - cc_lax_start\n",
+    "# # gch_lax = gch_lax_end - gch_lax_start\n",
+    "# cc_lax_farm_power = cc_sim.get_farm_power() / 1e6\n",
+    "# # gch_lax_farm_power = gch_sim.get_farm_power() / 1e6\n",
+    "#\n",
+    "# print(\"\\n------------ DiffWake powers (jax.lax) ------------\")\n",
+    "# print(f\"Total farm power (MW): {cc_lax_farm_power:.3f}\")\n",
+    "# # print(f\"Total farm power (MW): {gch_lax_farm_power:.3f}\")\n",
+    "# print(\"\\n------------ DiffWake runtimes (jax.lax) ------------\")\n",
+    "# print(f\"Cumulative-Curl: {cc_lax:.4f}s\")\n",
+    "# # print(f\"Gauss-Curl Hybrid: {gch_runtime:.4f}s\")"
    ],
    "id": "5ab5766ff9354719",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "------------ DiffWake powers (jax.lax) ------------\n",
-      "Total farm power (MW): 0.000\n",
-      "\n",
-      "------------ DiffWake runtimes (jax.lax) ------------\n",
-      "Cumulative-Curl: 0.5586s\n"
-     ]
-    }
-   ],
-   "execution_count": 17
+   "outputs": [],
+   "execution_count": 27
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## FLORIS vs DiffWake runtime tests\n",
+    "@w## FLORIS vs DiffWake runtime tests\n",
     "Let's run through GCH and CC simulations using FLORIS and DiffWake to see the performance improvements.\n",
     "The JAX-based implementations of GCH and CC should both yield linear runtimes whereas the FLORIS implementation of CC should lead to a runtime that varies quadratically with the number of turbines N (due to the nested loop). The FLORIS GCH implementation should be linear, since it only loops through the turbines once.\n",
-    "### Loop through 360 unique wind directions and 5 unique wind speeds using FLORIS and DiffWake"
+    "### 360 unique wind directions and 5 unique wind speeds using FLORIS and DiffWake\n",
+    "#### JAX"
    ],
    "id": "95fef3f4e3c63b67"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-05T09:15:42.729861500Z",
-     "start_time": "2026-02-05T09:15:24.749085900Z"
+     "end_time": "2026-02-10T17:47:49.457979300Z",
+     "start_time": "2026-02-10T17:47:49.193950900Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "start = 50\n",
-    "stop = 200\n",
-    "N_turbines = [i for i in range(start, stop + 1)]\n",
     "farm_powers = []\n",
     "turbine_powers = []\n",
-    "# for i in range(len(N_turbines)):\n",
-    "#     cfg = cfg.set(\n",
-    "#         layout_x=jnp.arange(0.0, 500.0 * (N_turbines[i] - 1) + 1, 500.0),\n",
-    "#         layout_y=jnp.zeros(N_turbines[i]),\n",
-    "#         wind_speeds=wind_speed,\n",
-    "#         wind_directions=wind_dir,\n",
-    "#         turbulence_intensities=ti\n",
-    "#     )\n",
-    "#     state = create_state(cfg)\n",
-    "#     result = simulate(state)\n",
-    "#     # state_final = state.replace(flow=state.flow.replace(u=result.u_sorted))\n",
-    "#     powers = power_fn(\n",
-    "#     power_thrust_table=state.farm.power_thrust_table,\n",
-    "#     velocities=result.u_sorted,\n",
-    "#     air_density=state.flow.air_density,\n",
-    "#     yaw_angles=state.farm.yaw_angles_sorted\n",
-    "# )\n",
-    "#     farm_powers.append(jnp.sum(powers))\n",
-    "# %%\n",
-    "# Optimized Loop using JAX vmap\n",
-    "import time\n",
     "\n",
-    "# 1. Define configurations\n",
-    "N_max = max(N_turbines)\n",
-    "padded_layouts = []\n",
-    "for n in N_turbines:\n",
-    "    # Real turbines\n",
-    "    x_real = jnp.arange(0.0, 500.0 * (n - 1) + 1, 500.0)\n",
-    "    y_real = jnp.arange(0.0, 10 * (n - 1) + 1, 10.0)\n",
-    "    \n",
-    "    # Padding (place far away to avoid interaction)\n",
-    "    n_pad = N_max - n\n",
-    "    x_pad = jnp.ones(n_pad) * 1e6\n",
-    "    y_pad = jnp.ones(n_pad) * 1e6\n",
-    "    \n",
-    "    layout = jnp.column_stack([\n",
-    "        jnp.concatenate([x_real, x_pad]),\n",
-    "        jnp.concatenate([y_real, y_pad])\n",
-    "    ])\n",
-    "    padded_layouts.append(layout)\n",
+    "wind_speeds = jnp.arange(2.0, 18.0, 1.0)\n",
+    "wind_directions = jnp.arange(0.0, 360.0, 3.0)\n",
+    "ti_table = 0.06\n",
     "\n",
-    "padded_layouts = jnp.stack(padded_layouts) # (Batch, N_max, 2)\n",
-    "\n",
-    "# 2. Create a base state for N_max turbines\n",
-    "cfg_max = cfg.set(\n",
-    "    layout_x=jnp.zeros(N_max),\n",
-    "    layout_y=jnp.zeros(N_max),\n",
-    "    wind_speeds=wind_speed,\n",
-    "    wind_directions=wind_dir,\n",
-    "    turbulence_intensities=ti\n",
+    "cfg_max = gch_config.set(\n",
+    "    wind_speeds=wind_speeds,\n",
+    "    wind_directions=wind_directions,\n",
+    "    turbulence_intensities=ti_table\n",
     ")\n",
+    "\n",
     "state_max = create_state(cfg_max)\n",
     "\n",
-    "# 3. Create the optimized runner\n",
     "# make_layout_runner returns a JIT-compiled function that takes layout (N_max, 2)\n",
     "runner = make_layout_runner(state_max, grid_resolution=3)\n",
     "\n",
-    "# 4. Run using vmap\n",
     "vmap_runner = jax.vmap(runner)\n",
     "\n",
     "print(\"Starting JAX optimized run (including compilation)...\")\n",
@@ -545,7 +500,6 @@
     "end_time = time.time()\n",
     "print(f\"Optimized run time (with JIT): {end_time - start_time:.4f} s\")\n",
     "\n",
-    "# 5. Extract farm powers\n",
     "# We need to sum only the first 'n' turbine powers for each simulation in the batch.\n",
     "# all_results.u_sorted has shape (Batch, B, N_max, Ny, Nz)\n",
     "\n",
@@ -574,16 +528,18 @@
    "id": "8dd5cebeead7a244",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting JAX optimized run (including compilation)...\n",
-      "Optimized run time (with JIT): 17.6262 s\n",
-      "First few optimized farm powers: [1.6387794e+07 1.6669730e+07 1.6951398e+07 1.7232804e+07 1.7513956e+07]\n"
+     "ename": "AttributeError",
+     "evalue": "'DiffWakeConfig' object has no attribute 'set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[28]\u001B[39m\u001B[32m, line 8\u001B[39m\n\u001B[32m      5\u001B[39m wind_directions = jnp.arange(\u001B[32m0.0\u001B[39m, \u001B[32m360.0\u001B[39m, \u001B[32m3.0\u001B[39m)\n\u001B[32m      6\u001B[39m ti_table = \u001B[32m0.06\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m8\u001B[39m cfg_max = \u001B[43mgch_config\u001B[49m\u001B[43m.\u001B[49m\u001B[43mset\u001B[49m(\n\u001B[32m      9\u001B[39m     wind_speeds=wind_speeds,\n\u001B[32m     10\u001B[39m     wind_directions=wind_directions,\n\u001B[32m     11\u001B[39m     turbulence_intensities=ti_table\n\u001B[32m     12\u001B[39m )\n\u001B[32m     14\u001B[39m state_max = create_state(cfg_max)\n\u001B[32m     16\u001B[39m \u001B[38;5;66;03m# make_layout_runner returns a JIT-compiled function that takes layout (N_max, 2)\u001B[39;00m\n",
+      "\u001B[31mAttributeError\u001B[39m: 'DiffWakeConfig' object has no attribute 'set'"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 28
   },
   {
    "metadata": {
